[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/GAME.gd" type="Script" id=1]
[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/MenuScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Levels.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/GameManager2.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/SoundNode.gd" type="Script" id=6]

[node name="GAME" type="Node2D"]
script = ExtResource( 1 )

[node name="background" parent="." instance=ExtResource( 2 )]

[node name="MenuScene" parent="." instance=ExtResource( 3 )]

[node name="Levels" parent="." instance=ExtResource( 4 )]
visible = false

[node name="GameManger" parent="." instance=ExtResource( 5 )]
visible = false

[node name="AudioManager" type="AudioStreamPlayer" parent="."]
script = ExtResource( 6 )

[connection signal="selectLevel" from="MenuScene" to="." method="select_level"]
[connection signal="go_to_level" from="Levels" to="." method="go_to_level"]
[connection signal="go_to_main_menu" from="Levels" to="." method="main_menu"]
[connection signal="back_to_level_select" from="GameManger" to="." method="select_level"]
[connection signal="card_revealed2" from="GameManger" to="." method="card_revealed2"]
[connection signal="pair_found" from="GameManger" to="." method="pair_found"]
